add setPiece method

--- a/src/game-board/styles.less
+++ b/src/game-board/styles.less
@@ -20,12 +20,15 @@
 
 .game-board_cell {
     flex-grow: 1;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 90%;
 }
 
 .game-board_light-cell {
-    background-color: rgb(200, 200, 200);
+    background-color: #ccc;
 }
 
 .game-board_dark-cell {
-    background-color: rgb(50, 50, 50);
+    background-color: #666;
 }
