--- a/src/game-board/styles.less
+++ b/src/game-board/styles.less
@@ -15,11 +15,11 @@
 
 .game-board_row {
     display: flex;
-    flex-grow: 1;
+    height: 100%;
 }
 
 .game-board_cell {
-    flex-grow: 1;
+    width: 100%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: 90%;
