--- a/src/game-board/styles.less
+++ b/src/game-board/styles.less
@@ -11,6 +11,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 .game-board_row {
@@ -31,4 +32,8 @@
 
 .game-board_dark-cell {
     background-color: #666;
+}
+
+.game-board_dragged-piece {
+    position: absolute;
 }
