--- a/src/game-board/styles.less
+++ b/src/game-board/styles.less
@@ -39,3 +39,11 @@
     display: none;
     pointer-events: none;
 }
+
+.game-board_light-cell.highlight {
+    background-color: mix(blue, #ccc, 15%);
+}
+
+.game-board_dark-cell.highlight {
+    background-color: mix(blue, #666, 15%);
+}
